2017-08-30  Florian Weimer  <fweimer@redhat.com>

	[BZ #21754]
	* malloc/arena.c (TUNABLE_CALLBACK set_mallopt_check): Do not set
	check_action.
	(ptmalloc_init): Do not set or use check_action.
	* malloc/hooks.c (malloc_check_get_size, realloc_check): Adjust
	call to malloc_printerr.  Remove return statement.
	(free_check): Likewise.  Remove arena unlock.
	(top_check): Update comment.  Adjust call to malloc_printerr.
	Remove heap repair code.
	* malloc/malloc.c (unlink): Adjust calls to malloc_printerr.
	(DEFAULT_CHECK_ACTION, check_action): Remove definitions.
	(sysmalloc): Adjust call to malloc_printerr.
	(munmap_chunk, __libc_realloc): Likewise.  Remove return
	statement.
	(_int_malloc, int_realloc): Likewise.  Remove errstr variable.
	Remove errout label and corresponding gotos.
	(_int_free): Likewise.  Remove arena unlock.
	(do_set_mallopt_check): Do not set check_action.
	(malloc_printerr): Adjust parameter list.  Do not mark arena as
	corrupt.
	* manual/memory.texi (Malloc Tunable Parameters): Remove TODO
	comment.
	* manual/probes.texi (Memory Allocation Probes): Remove
	memory_mallopt_check_action.

2017-08-30  Florian Weimer  <fweimer@redhat.com>

	[BZ #21754]
	* malloc/malloc.c (malloc_printerr): Always terminate the process,
	without printing a backtrace.  Do not leak any information in the
	error message.
	* manual/memory.texi (Heap Consistency Checking): Update.
	* manual/tunables.texi (Memory Allocation Tunables): Likewise.

2017-11-17  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	* sysdeps/powerpc/bits/hwcap.h (PPC_FEATURE2_HTM_NO_SUSPEND): New
	macro.

2017-08-09  Andreas Schwab  <schwab@suse.de>

	* nptl/Makefile (tests) [$(build-shared) = yes]: Add
	tst-compat-forwarder.
	(modules-names): Add tst-compat-forwarder-mod.
	($(objpfx)tst-compat-forwarder): Depend on
	$(objpfx)tst-compat-forwarder-mod.so.
	* nptl/tst-compat-forwarder.c: New file.
	* nptl/tst-compat-forwarder-mod.c: New file.
